working state with I2C on 26 & 27 pins

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:seeed_xiao_rp2040]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git#develop
+platform =  https://github.com/maxgerhardt/platform-raspberrypi.git
 board = seeed_xiao_rp2040
 framework = arduino
 lib_deps = 
-	; adafruit/Adafruit NeoPixel@^1.12.3
 	vase7u/ExponentMap@^1.0.0
 	pfeerick/elapsedMillis@^1.0.6
